# fipsd

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  campaign.yml  config.yml
Config/: Shared.xcconfig  Tests.xcconfig
FIPSD/: FIPSD.xctestplan  FIPSDApp.swift
FIPSD.xcodeproj/: project.pbxproj
FIPSD.xcworkspace/: contents.xcworkspacedata
FIPSDPackage/: Package.resolved  Package.swift
FIPSDUITests/: FIPSDUITests.swift
crates/fips-adapter/: Cargo.toml
crates/fips-adapter/src/: lib.rs
crates/fips-artifact/: Cargo.toml
crates/fips-artifact/examples/: generate_fixtures.rs
crates/fips-artifact/src/: artifact_tests.rs  lib.rs
crates/fips-artifact/tests/: golden.rs
crates/fips-atlas/: Cargo.toml
crates/fips-atlas/src/: contracts.rs  evaluate.rs  inputs.rs  lib.rs  specs.rs
crates/fips-atlas/tests/: m7_acceptance.rs
crates/fips-audit/: Cargo.toml
crates/fips-audit/src/: accounting.rs  benchmark.rs  determinism.rs  lib.rs  manifest.rs
crates/fips-audit/tests/: m8_acceptance.rs
crates/fips-campaign/: Cargo.toml
crates/fips-campaign/examples/: generate_m3_fixtures.rs  regenerate_m3_fixtures.rs
crates/fips-campaign/src/: adversary.rs  algebra.rs  corpus.rs  generators.rs  lib.rs  planners.rs  runner.rs  search.rs  search_metrics.rs  shrink.rs  tiny_explorer.rs  tiny_explorer_plan.rs  transports.rs
crates/fips-campaign/tests/: algebra_planners.rs  corpus_workflow.rs  generation_policy.rs  m3_acceptance.rs  search_shrink_runner.rs  tiny_explorer.rs
crates/fips-campaign/tests/common/: mod.rs
crates/fips-cli/: Cargo.toml
crates/fips-cli/src/: analysis_commands.rs  atlas_commands.rs  campaign_commands.rs  explore_commands.rs  io_helpers.rs  main.rs  oracle_commands.rs  release_commands.rs  scale_commands.rs  stream_commands.rs
crates/fips-engine/: Cargo.toml
crates/fips-engine-api/: Cargo.toml
crates/fips-engine-api/src/: lib.rs
crates/fips-engine/examples/: generate_m1_fixtures.rs  generate_m2_fixtures.rs
crates/fips-engine/src/: bloom.rs  cache.rs  engine.rs  engine_api.rs  engine_bloom.rs  engine_bloom_events.rs  engine_bloom_tests.rs  engine_config.rs  engine_data.rs  engine_data_config.rs  engine_data_json.rs  engine_data_reject.rs  engine_data_tests.rs  engine_data_transfer.rs  engine_data_types.rs  engine_events.rs  engine_fidelity.rs  engine_finish.rs  engine_intervention_config.rs  engine_intervention_inputs.rs  engine_interventions.rs  engine_invariants.rs  engine_lookup_storm.rs  engine_media_zones.rs  engine_parent_interventions.rs  engine_parent_tests.rs  engine_paths.rs  engine_recovery.rs  engine_recovery_delivery.rs  engine_recovery_flow.rs  engine_recovery_io.rs  engine_recovery_json.rs  engine_recovery_state.rs  engine_recovery_tests.rs  engine_rekey.rs  engine_resource_profiles.rs  engine_runtime.rs  engine_schedule.rs  engine_snapshot.rs  engine_sybil.rs  (+30 more)
crates/fips-engine/tests/: m1_acceptance.rs  m2_acceptance.rs
crates/fips-model/: Cargo.toml
crates/fips-model/src/: lib.rs
crates/fips-model/tests/: campaigns.rs
crates/fips-oracle/: Cargo.toml
crates/fips-oracle/examples/: generate_m5_fixtures.rs
crates/fips-oracle/src/: compiler.rs  differential.rs  fuzz.rs  importer.rs  lib.rs  oracle.rs  process_backend.rs  provenance.rs  suites.rs  telemetry.rs
crates/fips-oracle/tests/: import_compile.rs  m5_acceptance.rs  oracle_fuzz_suites.rs  telemetry_differential.rs
crates/fips-oracle/tests/common/: mod.rs
crates/fips-query/: Cargo.toml
crates/fips-query/src/: causal.rs  compare.rs  document.rs  export.rs  lib.rs  network.rs  query.rs  root_wave.rs
crates/fips-query/tests/: m6_acceptance.rs
crates/fips-scale/: Cargo.toml
crates/fips-scale/examples/: generate_m4_fixtures.rs
crates/fips-scale/src/: artifact.rs  bloom.rs  calibration.rs  cohort.rs  crypto.rs  demo.rs  hybrid.rs  lib.rs  types.rs  variants.rs
crates/fips-scale/tests/: calibration_demo.rs  cohort_variant.rs  hybrid_crypto.rs  m4_acceptance.rs
crates/fips-scale/tests/common/: mod.rs
docs/: acp-agent-sidebar.md  architecture.md  artifact-format.md  authenticated-sybil-admission.md  campaign-v1alpha1.md  explicit-application-transfers.md  fidelity-and-provenance.md  fips-seam-inventory.md  graph-native-bloom.md  graph-native-recovery.md  interactive-interventions.md  lookup-storms.md  m0-verification.md  m1-individual-engine.md  m1-verification.md  m2-recovery-accounting.md  m2-verification.md  m3-campaign-search.md  m3-verification.md  m4-scale-variants.md  m4-verification.md  m5-daemon-oracle.md  m5-verification.md  m6-analysis.md  m7-campaign-atlas.md  m8-verification.md  mcp-control-server.md  mixed-node-connectivity.md  multi-scale-visualization.md  natural-language-amendments.md  parent-instability.md  performance.md  product-capability-audit.md  product-spec.md  quickstart.md  renderer-evidence.md  roadmap.md  routed-payload-stream.md  session-rekey-waves.md  shared-medium-zones.md  (+4 more)
examples/: authenticated-sybil-wave.yaml  lookup-storm.yaml  parent-oscillation.yaml  root-ratchet.yaml  session-rekey-wave.yaml  shared-medium-zones.yaml  temporal-traffic.yaml  three-node-file-transfer.yaml  tiny-lifecycle-orders.yaml  transport-class-failover.yaml
schemas/: analysis-v1alpha1.schema.json  campaign-v1alpha1.schema.json  event-stream-v1alpha1.schema.json  normalized-plan-v1alpha1.schema.json  qualification-atlas-v1alpha1.schema.json  release-audit-v1alpha1.schema.json  release-manifest-v1alpha1.schema.json  render-frame-v1alpha1.schema.json  reproduction-bundle-v1alpha1.schema.json  run-artifact-v1alpha1.schema.json
scripts/: check-clean-install.sh  check-fips-codecs.sh  check-loc.sh  check-m5-daemon.sh  check-render-fips-vectors.sh  check.sh  install-mcp-server.sh  package-release.sh  prepare-macos-engine.sh  render-trace-audit.mjs
tools/: fips-codec-probe.rs
web/: app.js  data.js  index.html  package-lock.json  package.json  styles.css  vite.config.ts  worker.js
web/src/: contract.ts  (+6 more)
(+220 files in other folders)
