[workspace]
members = [
    "crates/fips-adapter",
    "crates/fips-atlas",
    "crates/fips-artifact",
    "crates/fips-campaign",
    "crates/fips-cli",
    "crates/fips-engine",
    "crates/fips-engine-api",
    "crates/fips-model",
    "crates/fips-oracle",
    "crates/fips-query",
    "crates/fips-audit",
    "crates/fips-scale",
]
exclude = ["pinned-fips"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/pablof7z/fipsd"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
jsonschema = { version = "0.33", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
sha2 = "0.10"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
