[package]
name = "fips-atlas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fips-adapter = { path = "../fips-adapter", version = "0.1.0" }
fips-model = { path = "../fips-model", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
