[package]
name = "fips-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fips-artifact = { path = "../fips-artifact", version = "0.1.0" }
fips-atlas = { path = "../fips-atlas", version = "0.1.0" }
fips-query = { path = "../fips-query", version = "0.1.0" }
fips-model = { path = "../fips-model", version = "0.1.0" }
fips-scale = { path = "../fips-scale", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
