[package]
name = "fips-campaign"
description = "Deterministic FIPS Wind Tunnel campaign algebra, search, and shrinking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fips-artifact = { path = "../fips-artifact", version = "0.1.0" }
fips-engine = { path = "../fips-engine", version = "0.1.0" }
fips-model = { path = "../fips-model", version = "0.1.0" }
fips-transport = { path = "../fips-transport", version = "0.1.0" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tempfile = "3.20"

[lints]
workspace = true
