[package]
name = "fips-cli"
description = "FIPS Wind Tunnel command-line interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fips-wind-tunnel"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fips-artifact = { path = "../fips-artifact", version = "0.1.0" }
fips-campaign = { path = "../fips-campaign", version = "0.1.0" }
fips-engine = { path = "../fips-engine", version = "0.1.0" }
fips-model = { path = "../fips-model", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
