[package]
name = "fips-engine-api"
description = "Deterministic engine boundary for FIPS Wind Tunnel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fips-model = { path = "../fips-model", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
