[package]
name = "fips-engine"
description = "Deterministic individual-node FIPS Wind Tunnel engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fips-adapter = { path = "../fips-adapter", version = "0.1.0" }
fips-artifact = { path = "../fips-artifact", version = "0.1.0" }
fips-engine-api = { path = "../fips-engine-api", version = "0.1.0" }
fips-model = { path = "../fips-model", version = "0.1.0" }
fips-transport = { path = "../fips-transport", version = "0.1.0" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
jsonschema.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
