[package]
name = "fips-scale"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fips-artifact = { path = "../fips-artifact", version = "0.1.0" }
fips-engine = { path = "../fips-engine", version = "0.1.0" }
fips-model = { path = "../fips-model", version = "0.1.0" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
